@@ -10,20 +10,24 @@ import com.dotmarketing.util.FileUtil;
 import com.dotmarketing.util.Logger;
 import com.dotmarketing.util.UtilMethods;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedMap;
 import com.liferay.util.StringPool;
 import io.vavr.control.Try;
 
 import java.io.File;
 import java.io.Serializable;
+import java.lang.ref.WeakReference;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Optional;
 import java.util.TreeMap;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.locks.ReadWriteLock;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -47,8 +51,8 @@ public class FileStorageAPIImpl implements FileStorageAPI {
     private final MetadataGenerator metadataGenerator;
     private final StoragePersistenceProvider persistenceProvider;
     private final MetadataCache metadataCache;
-
-    /**
+    // Create a ConcurrentHashMap to store locks for each cache key
+    private final ConcurrentHashMap<StorageKey, WeakReference<ReadWriteLock>> locks = new ConcurrentHashMap<>();/**
      * Constructor used by Integration Tests.
      *
      * @param objectReaderDelegate The {@link ObjectReaderDelegate} that reads an object.
@@ -95,7 +99,7 @@ public class FileStorageAPIImpl implements FileStorageAPI {
      * We can get it without having to call tika
      * @param binary {@link File} file to get the information
      * @param metaDataKeyFilter  {@link Predicate} filter the meta data key for the map result generation
-     * @return
+     * @return Map with the metadata
      */
     private Map<String, Serializable> generateBasicMetaData(final File binary,
             final Predicate<String> metaDataKeyFilter) {
@@ -120,7 +124,7 @@ public class FileStorageAPIImpl implements FileStorageAPI {
             return ensureTypes(standAloneMetadata);
         }
 
-        return ImmutableMap.of();
+        return Map.of();
     }
 
     /**
@@ -155,7 +159,7 @@ public class FileStorageAPIImpl implements FileStorageAPI {
             return Collections.emptyMap();
         }
 
-        metadataMap = ensureTypes(metadataMap);
+        ensureTypes(metadataMap);
 
         return ImmutableSortedMap.copyOf(metadataMap);
     }
@@ -167,21 +171,19 @@ public class FileStorageAPIImpl implements FileStorageAPI {
      */
     private TreeMap<String, Serializable> ensureTypes(TreeMap<String, Serializable> metadataMap){
         final Map<String, BasicMetadataFields> metadataFieldsMap = BasicMetadataFields.keyMap();
-        final Iterator<Entry<String, Serializable>> iterator = metadataMap.entrySet().iterator();
-        while(iterator.hasNext()){
-            final Entry<String, Serializable> entry = iterator.next();
+        for (Entry<String, Serializable> entry : metadataMap.entrySet()) {
             final Serializable value = entry.getValue();
             if (isSet(value)) {
                 final BasicMetadataFields field = metadataFieldsMap.get(entry.getKey());
-                if(null == field) {
-                   continue;
+                if (null == field) {
+                    continue;
                 }
                 if (field.isNumericType()) {
-                     Try.of(()-> entry.setValue(Integer.parseInt(value.toString())));
+                    Try.of(() -> entry.setValue(Integer.parseInt(value.toString())));
                 }
 
                 if (field.isBooleanType()) {
-                     Try.of(()-> entry.setValue(Boolean.parseBoolean(value.toString())));
+                    Try.of(() -> entry.setValue(Boolean.parseBoolean(value.toString())));
                 }
             }
         }
@@ -201,7 +203,7 @@ public class FileStorageAPIImpl implements FileStorageAPI {
         }
         final boolean objectExists = storage.existsObject(storageKey.getGroup(), storageKey.getPath());
 
-        Map<String, Serializable> metadataMap = objectExists ? retrieveMetadata(storageKey, storage) : Map.of();
+        Map<String, Serializable> metadataMap = objectExists ? retrieveMetaData(storageKey, storage) : Map.of();
         final Map<String, Serializable> onlyHasCustomMetadataMap = configuration.getIfOnlyHasCustomMetadata().apply(metadataMap);
 
         // here we test quite a few things:
@@ -236,52 +238,70 @@ public class FileStorageAPIImpl implements FileStorageAPI {
      * @throws DotDataException An error occurred when persisting the generated metadata.
      */
     private Map<String, Serializable> generateMetadataFromFile(final File binary,
-                                                               final GenerateMetadataConfig configuration, final StorageKey storageKey, final Map<String, Serializable> onlyHasCustomMetadataMap, final StoragePersistenceAPI storage) throws DotDataException {
-        Map<String, Serializable> metadataMap;
-        if (!validBinary(binary)) {
-            throw new IllegalArgumentException(String.format("the binary `%s` isn't accessible ",
-                    binary != null ? binary : "unknown"));
-        }
+            final GenerateMetadataConfig configuration, final StorageKey storageKey, final Map<String, Serializable> onlyHasCustomMetadataMap, final StoragePersistenceAPI storage) throws DotDataException {
+        validateBinary(binary);
 
-        Logger.debug(FileStorageAPIImpl.class, () -> String.format(
-                "Object identified by `/%s/%s` didn't exist in storage %s. It will be generated",
-                storageKey.getGroup(), storageKey,
-                configuration.isFull() ? "full-metadata" : "basic-metadata"));
         final long maxLength = configuration.getMaxLength();
-        metadataMap = configuration.isFull() ?
-                generateFullMetaData(binary,
-                        configuration.getMetaDataKeyFilter(), maxLength) :
-                generateBasicMetaData(binary,
-                        configuration.getMetaDataKeyFilter());
+        Map<String, Serializable> metadataMap = generateMetaDataBasedOnConfig(binary, configuration, maxLength);
 
         if (configuration.isStore()) {
-            if (null != configuration.getMergeWithMetadata()) {
-                final Map<String, Serializable> patchMap =
-                        configuration.getMergeWithMetadata().getCustomMetaWithPrefix();
-                //we need to include the prefix since we're saving it directly into persistence
-                if (!patchMap.isEmpty()) {
-                    //This is necessary since metadataMap is immutable.
-                    metadataMap = new HashMap<>(metadataMap);
-                    patchMap.forEach(metadataMap::putIfAbsent);
-                }
-            } else {
-                //Carry the custom metadata
-                if (!onlyHasCustomMetadataMap.isEmpty()) {
-                    //This metadata is expected to have prefix that's fine.
-                    //This is necessary since metadataMap is immutable.
-                    metadataMap = new HashMap<>(metadataMap);
-                    onlyHasCustomMetadataMap.forEach(metadataMap::putIfAbsent);
-                }
-            }
+            metadataMap = prepareMetadataForStorage(configuration, onlyHasCustomMetadataMap, metadataMap);
             storeMetadata(storageKey, storage, metadataMap);
         }
         return metadataMap;
     }
 
+    private void validateBinary(final File binary) {
+        if (!validBinary(binary)) {
+            throw new IllegalArgumentException(String.format("the binary `%s` isn't accessible ",
+                    binary != null ? binary : "unknown"));
+        }
+    }
+
+    private Map<String, Serializable> generateMetaDataBasedOnConfig(final File binary, final GenerateMetadataConfig configuration, final long maxLength) {
+        return configuration.isFull() ?
+                generateFullMetaData(binary, configuration.getMetaDataKeyFilter(), maxLength) :
+                generateBasicMetaData(binary, configuration.getMetaDataKeyFilter());
+    }
+
+    private Map<String, Serializable> prepareMetadataForStorage(final GenerateMetadataConfig configuration, final Map<String, Serializable> onlyHasCustomMetadataMap, Map<String, Serializable> metadataMap) {
+        if (null != configuration.getMergeWithMetadata()) {
+            final Map<String, Serializable> patchMap = configuration.getMergeWithMetadata().getCustomMetaWithPrefix();
+            if (!patchMap.isEmpty()) {
+                metadataMap = new HashMap<>(metadataMap);
+                patchMap.forEach(metadataMap::putIfAbsent);
+            }
+        } else {
+            if (!onlyHasCustomMetadataMap.isEmpty()) {
+                metadataMap = new HashMap<>(metadataMap);
+                onlyHasCustomMetadataMap.forEach(metadataMap::putIfAbsent);
+            }
+        }
+        return metadataMap;
+    }
+
+    /**
+     * Gets the lock for the given cache key. If the lock does not exist, it will be created.
+     * We use a {@link WeakReference} to avoid memory leaks.
+     * @param key The storage key.
+     *
+     * @return The {@link ReadWriteLock} for the given cache key.
+     */
+    private ReadWriteLock getLock(StorageKey key) {
+        return locks.compute(key, (k, v) -> {
+            ReadWriteLock lock = (v != null) ? v.get() : null;
+            if (lock == null) {
+                lock = new ReentrantReadWriteLock();
+                return new WeakReference<>(lock);
+            }
+            return v;
+        }).get();
+    }
+
     /**
      * Group existence verifier
-     * @param storageKey
-     * @param storage
+     * @param storageKey The {@link StorageKey} that identifies the binary file and how it will be stored.
+     * @param storage The {@link StoragePersistenceAPI} that will be used to persist the metadata.
      */
     private void checkBucket(final StorageKey storageKey, final StoragePersistenceAPI storage)
             throws DotDataException {
@@ -292,8 +312,8 @@ public class FileStorageAPIImpl implements FileStorageAPI {
 
     /**
      * save into cache
-     * @param cacheKey
-     * @param metadataMap
+     * @param cacheKey The cache key.
+     * @param metadataMap The metadata map.
      */
     private void putIntoCache(final String cacheKey, final Map<String, Serializable> metadataMap) {
         if(metadataMap.isEmpty()){
@@ -305,12 +325,12 @@ public class FileStorageAPIImpl implements FileStorageAPI {
 
     /**
      * meta-data retriever
-     * @param storageKey
-     * @param storage
-     * @return
+     * @param storageKey The {@link StorageKey} that identifies the binary file and how it will be stored.
+     * @param storage The {@link StoragePersistenceAPI} that will be used to persist the metadata.
+     * @return The metadata map.
      */
     @SuppressWarnings("unchecked")
-    private Map<String, Serializable> retrieveMetadata(final StorageKey storageKey,
+    private Map<String, Serializable> retrieveMetaData(final StorageKey storageKey,
             final StoragePersistenceAPI storage) throws DotDataException {
         final Map<String, Serializable> objectMap = (Map<String, Serializable>) storage
                 .pullObject(storageKey.getGroup(), storageKey.getPath(), this.objectReaderDelegate);
@@ -321,9 +341,9 @@ public class FileStorageAPIImpl implements FileStorageAPI {
 
     /**
      * sends metadata to the respective configured storage
-     * @param storageKey
-     * @param storage
-     * @param metadataMap
+     * @param storageKey The {@link StorageKey} that identifies the binary file and how it will be stored.
+     * @param storage The {@link StoragePersistenceAPI} that will be used to persist the metadata.
+     * @param metadataMap The metadata map.
      */
     private void storeMetadata(final StorageKey storageKey, final StoragePersistenceAPI storage,
             final Map<String, Serializable> metadataMap) throws DotDataException {
@@ -338,8 +358,8 @@ public class FileStorageAPIImpl implements FileStorageAPI {
 
     /**
      * Check's file is readable and valid
-     * @param binary
-     * @return
+     * @param binary The binary file.
+     * @return {@code true} if the file is valid, {@code false} otherwise.
      */
     private boolean validBinary(final File binary) {
         return null != binary && binary.exists() && binary.canRead();
@@ -347,8 +367,8 @@ public class FileStorageAPIImpl implements FileStorageAPI {
 
     /**
      * if the given configuration states we must override the previously existing file. It will be deleted before re-generating.
-     * @param storage
-     * @param generateMetaDataConfiguration
+     * @param storage The {@link StoragePersistenceAPI} that will be used to persist the metadata.
+     * @param generateMetaDataConfiguration The {@link GenerateMetadataConfig} that specifies the constraints and how the metadata will be generated.
      */
     private void checkOverride(final StoragePersistenceAPI storage,
             final GenerateMetadataConfig generateMetaDataConfiguration) throws DotDataException {
@@ -357,9 +377,9 @@ public class FileStorageAPIImpl implements FileStorageAPI {
 
     /**
      * if the given configuration states we must override the previously existing file will be deleted before re-generating.
-     * @param storage
-     * @param storageKey
-     * @param override
+     * @param storage The {@link StoragePersistenceAPI} that will be used to persist the metadata.
+     * @param storageKey The {@link StorageKey} that identifies the binary file and how it will be stored.
+     * @param override {@code true} if the file must be overridden, {@code false} otherwise.
      */
     private void checkOverride(final StoragePersistenceAPI storage, final StorageKey storageKey, final boolean override) throws DotDataException {
         if (override && storage.existsObject(storageKey.getGroup(), storageKey.getPath())) {
@@ -377,30 +397,52 @@ public class FileStorageAPIImpl implements FileStorageAPI {
     @Override
     public Map<String, Serializable> retrieveMetaData(final FetchMetadataParams requestMetaData)
             throws DotDataException {
-        if (requestMetaData.isCache()) {
-            final Map<String, Serializable> metadataMap = this.metadataCache
-                    .getMetadataMap(requestMetaData.getCacheKeySupplier().get());
-            if (null != metadataMap) {
-                checkEditableAsText(metadataMap);
-                putIntoCache(requestMetaData.getCacheKeySupplier().get(), metadataMap);
-                return metadataMap;
-            }
-        }
-
         Map<String, Serializable> metadataMap = null;
         final StorageKey storageKey = requestMetaData.getStorageKey();
-        final StoragePersistenceAPI storage = this.persistenceProvider
-                .getStorage(storageKey.getStorage());
+        final Optional<String> cacheKeyOptional = requestMetaData.isCache() ? Optional.of(requestMetaData.getCacheKeySupplier().get()) : Optional.empty();
+        if (cacheKeyOptional.isPresent()) {
+            metadataMap = this.metadataCache.getMetadataMap(cacheKeyOptional.get());
+        }
+        boolean updatedEditable = metadataMap != null && checkUpdateEditableAsText(metadataMap);
+        if (metadataMap == null || updatedEditable)  {
+            final ReadWriteLock lock = getLock(storageKey);
+            lock.writeLock().lock();
+            try {
+                // We need to update the cache with the new value
 
+                if (updatedEditable) {
+                    putIntoCache(cacheKeyOptional.get(), metadataMap);
+                    return metadataMap;
+                }
+
+
+                if (cacheKeyOptional.isPresent()) {
+                    metadataMap = this.metadataCache.getMetadataMap(cacheKeyOptional.get());
+                    checkUpdateEditableAsText(metadataMap);
+                }
+                if (metadataMap == null) {
+                    metadataMap = fetchAndCacheMetadata(requestMetaData, cacheKeyOptional.orElse(null));
+                }
+            } finally {
+                lock.writeLock().unlock();
+            }
+        }
+        return metadataMap;
+    }
+
+    private Map<String, Serializable> fetchAndCacheMetadata(FetchMetadataParams requestMetaData, String cacheKey)
+            throws DotDataException {
+        final StorageKey storageKey = requestMetaData.getStorageKey();
+        final StoragePersistenceAPI storage = this.persistenceProvider.getStorage(storageKey.getStorage());
         this.checkBucket(storageKey, storage);
+        Map<String, Serializable>  metadataMap = null;
         if (storage.existsObject(storageKey.getGroup(), storageKey.getPath())) {
-            metadataMap = retrieveMetadata(storageKey, storage);
-            Logger.debug(FileStorageAPIImpl.class,
-                    () -> "Retrieve the meta data from storage path: " + storageKey.getPath());
-            checkEditableAsText(metadataMap);
-            if (null != requestMetaData.getCacheKeySupplier()) {
+            metadataMap = retrieveMetaData(storageKey, storage);
+            Logger.debug(FileStorageAPIImpl.class, () -> "Retrieve the meta data from storage path: " + storageKey.getPath());
+            checkUpdateEditableAsText(metadataMap);
+            if (null != cacheKey) {
                 final Map<String, Serializable> projection = requestMetaData.getProjectionMapForCache().apply(metadataMap);
-                putIntoCache(requestMetaData.getCacheKeySupplier().get(), projection);
+                putIntoCache(cacheKey, projection);
                 return projection;
             }
         }
@@ -418,16 +460,15 @@ public class FileStorageAPIImpl implements FileStorageAPI {
      *
      * @param metadataMap The File's metadata Map.
      */
-    private void checkEditableAsText(final Map<String, Serializable> metadataMap) {
-        if (UtilMethods.isSet(metadataMap)) {
-            metadataMap.computeIfAbsent(EDITABLE_AS_TEXT.key(), key -> {
-
+    private boolean checkUpdateEditableAsText(final Map<String, Serializable> metadataMap) {
+        boolean created = false;
+        if (UtilMethods.isSet(metadataMap) && !metadataMap.containsKey(EDITABLE_AS_TEXT.key())) {
                 final String mimeType =
                         Try.of(() -> metadataMap.get(CONTENT_TYPE_META_KEY.key()).toString()).getOrElse(StringPool.BLANK);
-                return FileUtil.isFileEditableAsText(mimeType);
-
-            });
-        }
+                metadataMap.put(EDITABLE_AS_TEXT.key(), FileUtil.isFileEditableAsText(mimeType));
+                created = true;
+            }
+        return created;
     }
 
     @Override
@@ -461,59 +502,73 @@ public class FileStorageAPIImpl implements FileStorageAPI {
             final FetchMetadataParams fetchMetadataParams,
             final Map<String, Serializable> customAttributes) throws DotDataException {
 
-        final Map<String, Serializable> prefixedCustomAttributes = customAttributes.entrySet().stream()
-                .collect(Collectors.toMap(o -> Metadata.CUSTOM_PROP_PREFIX + o.getKey(), Entry::getValue));
-
+        final Map<String, Serializable> prefixedCustomAttributes = prefixCustomAttributes(customAttributes);
         final StorageKey storageKey = fetchMetadataParams.getStorageKey();
         final StoragePersistenceAPI storage = persistenceProvider.getStorage(storageKey.getStorage());
 
         this.checkBucket(storageKey, storage);
         if (storage.existsObject(storageKey.getGroup(), storageKey.getPath())) {
-            final Map<String, Serializable> retrievedMetadata = retrieveMetadata(storageKey, storage);
-            if(null != retrievedMetadata){
-                final Map<String,Serializable> newMetadataMap = new HashMap<>(retrievedMetadata);
+            handleExistingObject(fetchMetadataParams, prefixedCustomAttributes, storageKey, storage);
+        } else {
+            handleNonExistingObject(fetchMetadataParams, prefixedCustomAttributes, storageKey, storage);
+        }
+    }
 
-                if(prefixedCustomAttributes.isEmpty()){
-                   //Delete all custom attributes
-                    newMetadataMap.keySet().removeAll(newMetadataMap.entrySet().stream()
-                            .filter(entry -> entry.getKey().startsWith(Metadata.CUSTOM_PROP_PREFIX))
-                            .map(Entry::getKey).collect(Collectors.toSet()));
-                } else {
-                    //merge maps
-                    prefixedCustomAttributes.forEach((key, serializable) -> {
-                        if (!newMetadataMap.containsKey(key)) {
-                            newMetadataMap.remove(key);
-                        }
-                    });
-                    newMetadataMap.putAll(prefixedCustomAttributes);
-                }
+    private Map<String, Serializable> prefixCustomAttributes(final Map<String, Serializable> customAttributes) {
+        return customAttributes.entrySet().stream()
+                .collect(Collectors.toMap(o -> Metadata.CUSTOM_PROP_PREFIX + o.getKey(), Entry::getValue));
+    }
 
-                checkOverride(storage, fetchMetadataParams.getStorageKey(), true);
-                storeMetadata(storageKey, storage, newMetadataMap);
+    private void handleExistingObject(final FetchMetadataParams fetchMetadataParams, final Map<String, Serializable> prefixedCustomAttributes, final StorageKey storageKey, final StoragePersistenceAPI storage) throws DotDataException {
+        final Map<String, Serializable> retrievedMetadata = retrieveMetaData(storageKey, storage);
+        if(null != retrievedMetadata){
+            final Map<String,Serializable> newMetadataMap = mergeMetadataMaps(prefixedCustomAttributes, retrievedMetadata);
 
-                if(null != fetchMetadataParams.getCacheKeySupplier()){
-                    final String cacheKey = fetchMetadataParams.getCacheKeySupplier().get();
-                    putIntoCache(cacheKey, newMetadataMap);
-                } else {
-                    Logger.warn(FileStorageAPIImpl.class, "No Cache Key has been provided for stored object "+storageKey);
-                }
+            checkOverride(storage, fetchMetadataParams.getStorageKey(), true);
+            storeMetadata(storageKey, storage, newMetadataMap);
+
+            if(null != fetchMetadataParams.getCacheKeySupplier()){
+                final String cacheKey = fetchMetadataParams.getCacheKeySupplier().get();
+                putIntoCache(cacheKey, newMetadataMap);
             } else {
-                Logger.warn(FileStorageAPIImpl.class, String.format("Unable to locate object: `%s` ",storageKey));
+                Logger.warn(FileStorageAPIImpl.class, "No Cache Key has been provided for stored object "+storageKey);
             }
         } else {
-           if(fetchMetadataParams.isForceInsertion()){
-              storeMetadata(storageKey, storage, prefixedCustomAttributes);
-               if(null != fetchMetadataParams.getCacheKeySupplier()){
-                   final String cacheKey = fetchMetadataParams.getCacheKeySupplier().get();
-                   putIntoCache(cacheKey, prefixedCustomAttributes);
-               }
-           } else {
-               Logger.warn(FileStorageAPIImpl.class, String.format(
+            Logger.warn(FileStorageAPIImpl.class, String.format("Unable to locate object: `%s` ",storageKey));
+        }
+    }
+
+    private Map<String, Serializable> mergeMetadataMaps(final Map<String, Serializable> prefixedCustomAttributes, final Map<String, Serializable> retrievedMetadata) {
+        final Map<String,Serializable> newMetadataMap = new HashMap<>(retrievedMetadata);
+
+        if(prefixedCustomAttributes.isEmpty()){
+            //Delete all custom attributes
+            newMetadataMap.keySet().removeAll(newMetadataMap.keySet().stream()
+                    .filter(serializable -> serializable.startsWith(Metadata.CUSTOM_PROP_PREFIX)).collect(Collectors.toSet()));
+        } else {
+            //merge maps
+            prefixedCustomAttributes.forEach((key, serializable) -> {
+                if (!newMetadataMap.containsKey(key)) {
+                    newMetadataMap.remove(key);
+                }
+            });
+            newMetadataMap.putAll(prefixedCustomAttributes);
+        }
+        return newMetadataMap;
+    }
+
+    private void handleNonExistingObject(final FetchMetadataParams fetchMetadataParams, final Map<String, Serializable> prefixedCustomAttributes, final StorageKey storageKey, final StoragePersistenceAPI storage) throws DotDataException {
+        if(fetchMetadataParams.isForceInsertion()){
+            storeMetadata(storageKey, storage, prefixedCustomAttributes);
+            if(null != fetchMetadataParams.getCacheKeySupplier()){
+                final String cacheKey = fetchMetadataParams.getCacheKeySupplier().get();
+                putIntoCache(cacheKey, prefixedCustomAttributes);
+            }
+        } else {
+            Logger.warn(FileStorageAPIImpl.class, String.format(
                     "Unable to set custom attribute for the given group: `%s` and path: `%s` ",
                     storageKey.getGroup(), storageKey.getPath()));
-            }
         }
-
     }
 
     @Override
